--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "dk.aau.cs.psylog.frontapp"
+        applicationId "dk.aau.cs.psylog.sensor.frontapp"
         minSdkVersion 18
         targetSdkVersion 21
         versionCode 1
