--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="dk.aau.cs.psylog.frontapp">
+    package="dk.aau.cs.psylog.sensor.frontapp">
+    <uses-permission android:name="dk.aau.cs.psylog.psylog.READ_DB"/>
+    <uses-permission android:name="dk.aau.cs.psylog.psylog.WRITE_DB"/>
+    <uses-permission android:name="android.permission.GET_TASKS"/>
 
     <application android:allowBackup="true" android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher" android:theme="@style/AppTheme">
-
+        <service
+            android:name=".PsyLogService"
+            android:label="Service"
+            android:process=":my_process"
+            android:exported="true">
+        </service>
     </application>
 
 </manifest>
